--- a/MyAndroidProject/app/src/main/AndroidManifest.xml
+++ b/MyAndroidProject/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.liuying.rndemo">
+    package="com.liuying.myandroidproject">
 
   <application
-      android:name=".MyApplication"
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
@@ -17,9 +16,6 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
-
-    <activity android:name="com.liuying.rndemo.activity.FirstActivity"/>
   </application>
 
 </manifest>
