--- a/RNDemo/app/build.gradle
+++ b/RNDemo/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
+project.ext.react = [entryFile: "index.js"]
 
+apply from: "../node_modules/react-native/react.gradle"
 android {
   compileSdkVersion 26
   defaultConfig {
@@ -16,7 +18,6 @@ android {
     packagingOptions {
       exclude "lib/arm64-v8a"
     }
-
   }
   buildTypes {
     release {
@@ -26,7 +27,7 @@ android {
   }
 
   configurations.all {
-    resolutionStrategy.force'com.google.code.findbugs:jsr305:1.3.9'
+    resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
   }
 }
 
@@ -37,6 +38,7 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.1'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+  implementation 'com.facebook.rebound:rebound:0.3.8'
   implementation "com.facebook.react:react-native:+" // From node_modules.
 }
 
